# peak_haunt

./: .env.example  .gitignore  .instructions.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/hooks/: pre-commit.json
.github/skills/git-commit/: SKILL.md
.github/skills/git-pull-request/: SKILL.md
.github/skills/skill-generator/: SKILL.md
.github/skills/skill-generator/assets/: SKILL-template.md  script-template.js
.github/skills/skill-generator/references/: naming-conventions.md  skill-structure.md
api/: Dockerfile  __init__.py  main.py  pyproject.toml
application/: Dockerfile  package.json  tsconfig.json
application/app/: layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/db/: database.py  models.py
backend/app/schemas/: profile.py
docs/references/: 0627.txt
frontend/: .dockerignore  Dockerfile  package.json  tsconfig.json
frontend/actions/: submitProfile.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/components/: ProfileForm.tsx
frontend/schemas/: profile.ts
